<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/lblBook"
        app:layout_constraintStart_toStartOf="@+id/lblBook" />

    <TextView
        android:id="@+id/lblMob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mob_no"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@+id/lblEdit"
        app:layout_constraintStart_toEndOf="@+id/lblEdit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Book Name"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/lblEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblMob" />

    <TextView
        android:id="@+id/lblEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:text="@string/edit"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="@+id/lblDelete"
        app:layout_constraintEnd_toStartOf="@+id/lblDelete"
        app:layout_constraintTop_toTopOf="@+id/lblDelete" />

    <TextView
        android:id="@+id/lblDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/delete"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblMob" />

</androidx.constraintlayout.widget.ConstraintLayout>